Arrow icons fix (#15)
* Fix arrow icons not showing on prod

* Hide spinning start animation

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -80,7 +80,7 @@ body.fixed-bg {
   opacity: 1;
 }
 .custom-link {
-  @apply cursor-pointer text-lg lg:text-3xl w-48 lg:w-[260px] border-b-2 lg:border-b-4 border-white pb-4 relative before:absolute before:bg-contain before:-right-4 before:top-0 md:before:top-1 before:!h-6 before:!w-12 md:before:h-8 md:before:w-16 before:bg-no-repeat before:bg-[url('arrow.svg')];
+  @apply cursor-pointer text-lg lg:text-3xl w-48 lg:w-[260px] border-b-2 lg:border-b-4 border-white pb-4 relative before:absolute before:bg-contain before:-right-4 before:top-0 md:before:top-1 before:!h-6 before:!w-12 md:before:h-8 md:before:w-16 before:bg-no-repeat before:bg-[url('public/arrow.svg')];
 }
 
 .custom-link--black {
